fix: correct issue of interpolating images
apers that declaring the value of height twice
cause the image to double, declaring only one
time is the correct approach
.avatar.proportioned
.avatar.distorted

[Ticket: 04-chaining-selectors]

--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -2,13 +2,11 @@
 avatar distorted
 avatar proportioned
 */
-.avatar{
-    width: 200px;
-}
 .avatar.proportioned{
     width: 300px;
     height: auto;
 }
 .avatar.distorted{
     height: 400px;
+	width: 200px;
 }
